# Stockpiler

./: Filter.csv  ItemNumbering.csv  ItemNumberingnew.csv  Stockpiler.py  autoclick.py  clicker.py  pyproject.toml  requirements.txt  stockpiler_new.py
src/stockpiler/: Item_numbering.py  Item_picker_ui.py  filter_ui.py  grab_stockpile_image.py  items.py  itemscan.py  learn.py  main.py  match_template_best_scale.py  menu.py  order_ui.py  popup.py  search_image.py  settings_ui.py  style.py  table_ui.py  tooltip.py
