[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "foxhole companion"
version = "0.0.1"
authors = [
  { name="pabelpanator", email="" },
]
description = "A python program for interacting with foxhole"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sc2umich-org/solids-vis-1"
Issues = "https://github.com/sc2umich-org/solids-vis-1/issues"