[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "stockpiler"
version = "0.0.1"
authors = [
  { name="pabelpanator", email="p@f.com" },
]
description = "A python program for interacting with foxhole"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""
Issues = ""